# AMR_simulator

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: AMR.rviz  amr.urdf  amr_occ.lua  amr_occ_localization.lua  amr_tsdf_localization.lua  backpack_2d_tsdf.lua  joint_state_controller.yaml  lg_amr.urdf  lg_amr_occ_localization.lua  lg_amr_tsdf.lua  lg_amr_tsdf_localization.lua
launch/: amr_occ_localization.launch  amr_slam_occ.launch  amr_slam_tsdf.launch  amr_tsdf_localization.launch  controller_utils.launch  dd_amr_simulation.launch  lg_amr_occ_localization.launch  lg_amr_slam_occ.launch  lg_amr_slam_tsdf.launch  lg_amr_tsdf_localization.launch  omni_amr_simulation.launch
pbstream/: map_occ.pbstream  map_occ.pbstream.yaml  map_occ_10cm.pbstream  map_occ_10cm.pbstream.pgm  map_occ_10cm.pbstream.yaml  map_tsdf.pbstream.yaml  map_tsdf_10cm.pbstream  map_tsdf_10cm.pbstream.pgm  map_tsdf_10cm.pbstream.yaml  museum_occ.pbstream  museum_occ.pbstream.yaml  museum_occ.yaml  museum_occ1.pbstream.yaml  museum_occ_2test.pbstream  museum_occ_2test.pbstream.pgm  museum_occ_2test.pbstream.yaml  museum_occ_2test.pgm  museum_tsdf.yaml  museum_tsdf_2test.pbstream  museum_tsdf_2test.pbstream.yaml  museum_tsdf_3test.pbstream  museum_tsdf_3test.pbstream.pgm  museum_tsdf_3test.pbstream.yaml  museum_tsdf_3test.pgm
robots/dd_type/: dd_amr.urdf.xacro
robots/dd_type/xacros/: dd_amr.gazebo  dd_amr.specs  dd_amr_body.xacro  dd_amr_caster_wheel.xacro  dd_amr_fixed_wheel_left.xacro  imu.xacro  (+2 more)
robots/omni_type/: omni_amr.urdf.xacro
worlds/: museum.world  willow_garage.world
(+10 files in other folders)
