<?xml version="1.0"?>
<package format="2">
  <name>amr_simulation</name>
  <version>0.1.0</version>
  <description>The amr_simulation package</description>

  <maintainer email="kimtj5521@gmail.com">Taejin Kim</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
